--- a/src/components/lore/lore.css
+++ b/src/components/lore/lore.css
@@ -1,7 +1,6 @@
-.lore-content {
+.lore-container {
     padding: 2rem;
     max-height: 100%;
-    margin-top: 10%;
     margin-bottom: 3%;
     position: relative;
    
