--- a/src/components/rules/rules.css
+++ b/src/components/rules/rules.css
@@ -1,7 +1,6 @@
 .rules-container{
     padding: 2rem;
     max-height: 100%;
-    margin-top: 10%;
     
 }
 
